# rl-prompt-engine

./: .gitignore  README.md  requirements.txt  requirements_openai.txt
research/: GETTING_STARTED.md  README.md
research/analysis/: performance_analysis.ipynb
rl_prompt_engine/: .gitignore  QUICK_START.md  README.md  __init__.py  cli.py  env.template  pyproject.toml  setup.py  template.txt  usage_examples.py
rl_prompt_engine/configs/: default_config.json  generic_config.json  luxury_config.json  my_luxury_config.json
rl_prompt_engine/core/: __init__.py  logging_config.py  prompt_engine.py  prompt_env.py  template_loader.py
rl_prompt_engine/rl_prompt_engine/: __init__.py  cli.py  cli_simple.py  train_appointment_prompts.py
rl_prompt_engine/rl_prompt_engine/config/: __init__.py
rl_prompt_engine/rl_prompt_engine/core/: __init__.py  appointment_prompt_env.py  appointment_prompt_generator.py  config_generator.py  meta_prompting.py  prompt_env.py  prompt_generator.py  prompt_system.py  training_callback.py
rl_prompt_engine/rl_prompt_engine/examples/: __init__.py  demo_appointment_prompts.py  demo_end_to_end.py  demo_meta_prompt_usage.py  demo_meta_prompting.py  demo_meta_prompting_simple.py  end_to_end_interface.py  end_to_end_meta_prompting.py  eval_appointment_prompts.py  prompt_template_generator.py  quick_start.py  simple_prompt_template_generator.py
rl_prompt_engine/templates/: meta_prompt_template.md  prompt_evolution_template.md
salesgym/src/: business_interface.py  config.json  config.py  conversation_simulator.py  eval.py  purchase_env.py  train.py  (+1 more)
(+6 files in other folders)
